RESOLVED FIXED319780
HTML parser should drop nodes that cannot be inserted into a document
https://bugs.webkit.org/show_bug.cgi?id=319780
Summary HTML parser should drop nodes that cannot be inserted into a document
Anne van Kesteren
Reported 2026-07-19 07:14:48 PDT
.
Attachments
Anne van Kesteren
Comment 1 2026-07-19 07:17:15 PDT
Radar WebKit Bug Importer
Comment 2 2026-07-26 07:15:13 PDT
EWS
Comment 3 2026-08-19 06:04:43 PDT
Committed 319453@main (e8b1d6b3bee1): <https://commits.webkit.org/319453@main> Reviewed commits have been landed. Closing PR #69748 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.